@@ -79,7 +79,7 @@ def run_code(
         fileobj.write(code.replace("\r\n", "\n"))
 
     interp = context.get(
-        "csq_python_interpreter", context.get("cs_python_interpreter", "python3")
+        "csq_python_sandbox_interpreter", context.get("cs_python_interpreter", "python3")
     )
 
     args = ["bwrap", "--bind", tmpdir, "/run"]
